--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,22 @@ nav ul li a {
     color: #fff;
     text-decoration: none;
 }
-
+.container{
+    display: flex;
+}
+.card{
+    position: relative;
+    left:0px;
+}
+.card:not(:first-child){
+    margin-left: -50px;
+}
+.card:hover{
+    transform: translateY(-20px);
+}
+.card:hover ~ .card{
+    left:50px;
+}
 section {
     padding: 20px;
     margin: 20px 0;
